--- a/LifeSaverSite/Views/Shared/_Layout.cshtml
+++ b/LifeSaverSite/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                     <li>@Html.ActionLink("Dashboard", "Dashboard", "Home", new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Compare", "Compare", "Home", new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Image", "Image", "Home", new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Report", "Index", "Report", new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Report", "Report", "Home", new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Inventory", "Inventory", "Home", new { @class = "nav-link" })</li>
 
                 </ul>
