--- a/LifeSaverSite/Views/Home/Inventory.cshtml
+++ b/LifeSaverSite/Views/Home/Inventory.cshtml
@@ -7,16 +7,19 @@
 <div class="container">
     <h3>Inventory</h3>
     <div class="container">
-        <div class="row">
-            <ul class="nav nav-tabs">
-                <li class="active"><a href="#">Lagos Clinics</a></li>
-                <li><a href="#">Yobe Clinics</a></li>
-                <li><a href="#">Abia Clinic</a></li>
-                <li><a href="#">Cross River Clinic</a></li>
-            </ul>
-            <button type="button" class="btn btn-primary">Compare Inventory</button>
-        </div>
+        <ul class="nav nav-tabs">
+            <li><a href="#">Lagos Clinics</a></li>
+            <li><a href="#">Yobe Clinics</a></li>
+            <li><a href="#">Abia Clinic</a></li>
+            <li><a href="#">Cross River Clinic</a></li>
+            <li>
+                <div class="text-right">
+                    <button type="button" class="bottom-right" style="margin-left:925px;">Compare Inventory</button>
+                </div>
+            </li>     
+        </ul>
     </div>
+        
     <table class="table table-striped">
         <thead><tr><th>Inventory List of Clinics in LAGOS</th></tr></thead>
         <thead>
