--- a/LifeSaverSite/Views/Home/DashBoard.cshtml
+++ b/LifeSaverSite/Views/Home/DashBoard.cshtml
@@ -1,19 +1,20 @@
 ﻿@{
     ViewBag.Title = "Dashboard";
 }
+    <span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
 <div class="row">
     <div class="col-md-2"></div>
     <div class="col-sm-8">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="../Images/1.jpeg" alt="First slide">
+                    <img class="d-block w-100" src="~/Content/Img/barchart.PNG" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../Images/1.jpeg" alt="Second slide">
+                    <img class="d-block w-100" src="~/Content/Img/c-piechart.PNG" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="../Images/1.jpeg" alt="Third slide">
+                    <img class="d-block w-100" src="~/Content/Img/Report A.PNG" alt="Third slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -33,7 +34,7 @@
 <span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
 
 
-<div class="card-deck">
+@*<div class="card-deck">
     <div class="card">
         <img class="card-img-top" src="~/Images/1.jpeg" alt="Card image cap">
         <div class="card-body">
@@ -66,6 +67,6 @@
             <a href="#" class="btn btn-primary">Click here</a>
         </div>
     </div>
-</div>
+</div>*@
 
 
