--- a/LifeSaverSite/Views/Shared/footer.cshtml
+++ b/LifeSaverSite/Views/Shared/footer.cshtml
@@ -9,11 +9,13 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto nav-link">
-                        @*<li>@Html.ActionLink("About", "About", "Home", new { @class = "nav-link" })</li>
+                        <li>@Html.ActionLink("About", "About", "Home", new { @class = "nav-link" })</li>
                         <li>@Html.ActionLink("Contact ", "Contact", "Home", new { @class = "nav-link" })</li>
-                        <li>@Html.ActionLink("FAQ", "FAQ", "Home", new { @class = "nav-link" })</li>
-                        <li>@Html.ActionLink("Terms And Conditions", "Terms And Conditions", "Home", new { @class = "nav-link" })</li>
-                        <li>@Html.ActionLink("Privacy Policies", "Privacy Policies", "Home", new { @class = "nav-link" })</li>*@
+                        <li>@Html.ActionLink("Login ", "Login", "Home", new { @class = "nav-link" })</li>
+
+                        @*<li>@Html.ActionLink("FAQ", "FAQ", "Home", new { @class = "nav-link" })</li>
+        <li>@Html.ActionLink("Terms And Conditions", "Terms And Conditions", "Home", new { @class = "nav-link" })</li>
+        <li>@Html.ActionLink("Privacy Policies", "Privacy Policies", "Home", new { @class = "nav-link" })</li>*@
 
                     </ul>
                  
