--- a/LifeSaverSite/Views/Home/Login.cshtml
+++ b/LifeSaverSite/Views/Home/Login.cshtml
@@ -28,12 +28,11 @@
                             <label for="pwd">Password:</label>
                             <input type="password" class="form-control" id="pwd">
                         </div>
-                        <div class="form-group form-check ">
-                            <label class="form-check-label">
-                                <input class="form-check-input" type="checkbox"> Remember me
-                            </label>
-                        </div>
+                       
+                            <button type="submit" class="btn btn-primary">Reset Password</button>
+                       
                         <button type="submit" class="btn btn-primary">Submit</button>
+
                         <span> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
                     </div>
                 </div>
