--- a/LifeSaverSite/Views/Home/Report.cshtml
+++ b/LifeSaverSite/Views/Home/Report.cshtml
@@ -20,6 +20,6 @@
         <li class="list-group-item">May 19</li>
     </ul>
 </div>
-<img src="~/Content/Img/capture.jpg" class="mx-auto d-block img-fluid img-thumbnail" />
+<img src="~/Content/Img/reportpge.jpg" class="mx-auto d-block img-fluid img-thumbnail" />
 
 <button type="export to PDF" class="btn btn-primary">Export To PDF</button>
