--- a/LifeSaverSite/Views/Home/Compare.cshtml
+++ b/LifeSaverSite/Views/Home/Compare.cshtml
@@ -26,23 +26,22 @@
         <img src="~/Content/Img/compare.JPG" class="mx-auto d-block img-fluid img-thumbnail" />
     </div>
     <div id="menu1" class="container tab-pane fade">
-        <br>
-        <h3>Compare Inventory of two clinics</h3>
-        <div class="dropdown">
-            <div class="row">
-                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                    Clinic A
-                </button>
+        <div class="row">
+            <p>Compare</p>
+            <div class="dropdown">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" style="margin-left:10px;">Clinic A</button>
             </div>
-            <div class="row"> <p>       </p> </div>
+        </div>
+        <div class="row"> <p>       </p> </div>
             <div class="row">
-                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
-                    Clinic B
-                </button>
+                <p> With   </p>
+                <div class="dropdown">
+                    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" style="margin-left:40px;">Clinic B</button>
+                </div>
             </div>
+    </div>
             <div id="menu2" class="container tab-pane fade">
                 <br>
                 <h3>Compare Reports of two clinics</h3>
-            </div>
-        </div>
+            </div>   
 </div>
